--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,222 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+        --inverted-text: #f1f9f3;
+        --inverted-background: #010402;
+
+        --text: #060e08;
+        --bg: #fbfefc;
+        --primary: #5cb26f;
+        --secondary: #a1d3c9;
+        --accent: #78bfb9;
+        --textcontrast: #64d97b;
+        --bgcontrast: #64d97b;
+        --primarycontrast: #64d97b;
+        --secondarycontrast: #64d97b;
+        --accentcontrast: #64d97b;
+
+        --static: rgba(225, 225, 225, 0.5);
+        --static4: rgba(225, 225, 225, 0.2);
+        --static3: rgb(255, 255, 255);
+        --static2: #0f0f0f;
+        --static5: rgb(24, 172, 122);
+        --static6: rgba(0, 0, 0, 0.05);
+        --static7: rgba(0, 0, 0, 0.1);
+        --static8: rgba(0, 0, 0, 0.05);
+        --static9: rgba(0, 0, 0, 0.3);
+        --static10: rgba(225, 225, 225);
+        --static11: rgba(0, 0, 0, 0.03);
+        --static12: rgba(255, 255, 255, 0.8);
+        --static13: rgb(235, 235, 235);
+        --static14: rgba(0, 0, 0, 0.2);
+        --static15: rgba(255, 255, 255, 0.5);
+
+        --text5: hsl(135, 40%, 4%, 5%);
+        --text10: hsl(135, 40%, 4%, 10%);
+        --text15: hsl(135, 40%, 4%, 15%);
+        --text20: hsl(135, 40%, 4%, 20%);
+        --text25: hsl(135, 40%, 4%, 25%);
+        --text30: hsl(135, 40%, 4%, 30%);
+        --text35: hsl(135, 40%, 4%, 35%);
+        --text40: hsl(135, 40%, 4%, 40%);
+        --text45: hsl(135, 40%, 4%, 45%);
+        --text50: hsl(135, 40%, 4%, 50%);
+        --text55: hsl(135, 40%, 4%, 55%);
+        --text60: hsl(135, 40%, 4%, 60%);
+        --text65: hsl(135, 40%, 4%, 65%);
+        --text70: hsl(135, 40%, 4%, 70%);
+        --text75: hsl(135, 40%, 4%, 75%);
+        --text80: hsl(135, 40%, 4%, 80%);
+        --text85: hsl(135, 40%, 4%, 85%);
+        --text90: hsl(135, 40%, 4%, 90%);
+        --text95: hsl(135, 40%, 4%, 95%);
+        --primary5: hsl(133, 36%, 53%, 5%);
+        --primary10: hsl(133, 36%, 53%, 10%);
+        --primary15: hsl(133, 36%, 53%, 15%);
+        --primary20: hsl(133, 36%, 53%, 20%);
+        --primary25: hsl(133, 36%, 53%, 25%);
+        --primary30: hsl(133, 36%, 53%, 30%);
+        --primary35: hsl(133, 36%, 53%, 35%);
+        --primary40: hsl(133, 36%, 53%, 40%);
+        --primary45: hsl(133, 36%, 53%, 45%);
+        --primary50: hsl(133, 36%, 53%, 50%);
+        --primary55: hsl(133, 36%, 53%, 55%);
+        --primary60: hsl(133, 36%, 53%, 60%);
+        --primary65: hsl(133, 36%, 53%, 65%);
+        --primary70: hsl(133, 36%, 53%, 70%);
+        --primary75: hsl(133, 36%, 53%, 75%);
+        --primary80: hsl(133, 36%, 53%, 80%);
+        --primary85: hsl(133, 36%, 53%, 85%);
+        --primary90: hsl(133, 36%, 53%, 90%);
+        --primary95: hsl(133, 36%, 53%, 95%);
+        --secondary5: hsl(168, 36%, 73%, 5%);
+        --secondary10: hsl(168, 36%, 73%, 10%);
+        --secondary15: hsl(168, 36%, 73%, 15%);
+        --secondary20: hsl(168, 36%, 73%, 20%);
+        --secondary25: hsl(168, 36%, 73%, 25%);
+        --secondary30: hsl(168, 36%, 73%, 30%);
+        --secondary35: hsl(168, 36%, 73%, 35%);
+        --secondary40: hsl(168, 36%, 73%, 40%);
+        --secondary45: hsl(168, 36%, 73%, 45%);
+        --secondary50: hsl(168, 36%, 73%, 50%);
+        --secondary55: hsl(168, 36%, 73%, 55%);
+        --secondary60: hsl(168, 36%, 73%, 60%);
+        --secondary65: hsl(168, 36%, 73%, 65%);
+        --secondary70: hsl(168, 36%, 73%, 70%);
+        --secondary75: hsl(168, 36%, 73%, 75%);
+        --secondary80: hsl(168, 36%, 73%, 80%);
+        --secondary85: hsl(168, 36%, 73%, 85%);
+        --secondary90: hsl(168, 36%, 73%, 90%);
+        --secondary95: hsl(168, 36%, 73%, 95%);
+        --accent5: hsl(175, 36%, 61%, 5%);
+        --accent10: hsl(175, 36%, 61%, 10%);
+        --accent15: hsl(175, 36%, 61%, 15%);
+        --accent20: hsl(175, 36%, 61%, 20%);
+        --accent25: hsl(175, 36%, 61%, 25%);
+        --accent30: hsl(175, 36%, 61%, 30%);
+        --accent35: hsl(175, 36%, 61%, 35%);
+        --accent40: hsl(175, 36%, 61%, 40%);
+        --accent45: hsl(175, 36%, 61%, 45%);
+        --accent50: hsl(175, 36%, 61%, 50%);
+        --accent55: hsl(175, 36%, 61%, 55%);
+        --accent60: hsl(175, 36%, 61%, 60%);
+        --accent65: hsl(175, 36%, 61%, 65%);
+        --accent70: hsl(175, 36%, 61%, 70%);
+        --accent75: hsl(175, 36%, 61%, 75%);
+        --accent80: hsl(175, 36%, 61%, 80%);
+        --accent85: hsl(175, 36%, 61%, 85%);
+        --accent90: hsl(175, 36%, 61%, 90%);
+        --accent95: hsl(175, 36%, 61%, 95%);
+    }
+    .dark {
+        --inverted-text: #060e08;
+        --inverted-background: #fbfefc;
+
+        --text: #f1f9f3;
+        --bg: #010402;
+        --primary: #4da35f;
+        --secondary: #2c5e54;
+        --accent: #408781;
+        --textcontrast: #64d97b;
+        --bgcontrast: #64d97b;
+        --primarycontrast: #ffdd00;
+        --secondarycontrast: #ffdd00;
+        --accentcontrast: #ffdd00;
+
+        --static: rgba(0, 0, 0, 0.5);
+        --static4: rgba(225, 225, 225, 0.2);
+        --static3: rgb(22, 22, 22);
+        --static2: rgb(240, 240, 240);
+        --static5: rgb(24, 172, 122);
+        --static6: rgba(255, 255, 255, 0.15);
+        --static7: rgba(255, 255, 255, 0.1);
+        --static8: rgba(255, 255, 255, 0.05);
+        --static9: rgba(255, 255, 255, 0.3);
+        --static10: rgb(40, 40, 40);
+        --static11: rgba(255, 255, 255, 0.03);
+        --static12: rgba(0, 0, 0, 0.8);
+        --static13: rgb(40, 40, 40);
+        --static14: rgba(255, 255, 255, 0.2);
+        --static15: rgba(0,0,0, 0.5);
+
+        --text5: hsl(135, 40%, 96%, 5%);
+        --text10: hsl(135, 40%, 96%, 10%);
+        --text15: hsl(135, 40%, 96%, 15%);
+        --text20: hsl(135, 40%, 96%, 20%);
+        --text25: hsl(135, 40%, 96%, 25%);
+        --text30: hsl(135, 40%, 96%, 30%);
+        --text35: hsl(135, 40%, 96%, 35%);
+        --text40: hsl(135, 40%, 96%, 40%);
+        --text45: hsl(135, 40%, 96%, 45%);
+        --text50: hsl(135, 40%, 96%, 50%);
+        --text55: hsl(135, 40%, 96%, 55%);
+        --text60: hsl(135, 40%, 96%, 60%);
+        --text65: hsl(135, 40%, 96%, 65%);
+        --text70: hsl(135, 40%, 96%, 70%);
+        --text75: hsl(135, 40%, 96%, 75%);
+        --text80: hsl(135, 40%, 96%, 80%);
+        --text85: hsl(135, 40%, 96%, 85%);
+        --text90: hsl(135, 40%, 96%, 90%);
+        --text95: hsl(135, 40%, 96%, 95%);
+        --primary5: hsl(133, 36%, 47%, 5%);
+        --primary10: hsl(133, 36%, 47%, 10%);
+        --primary15: hsl(133, 36%, 47%, 15%);
+        --primary20: hsl(133, 36%, 47%, 20%);
+        --primary25: hsl(133, 36%, 47%, 25%);
+        --primary30: hsl(133, 36%, 47%, 30%);
+        --primary35: hsl(133, 36%, 47%, 35%);
+        --primary40: hsl(133, 36%, 47%, 40%);
+        --primary45: hsl(133, 36%, 47%, 45%);
+        --primary50: hsl(133, 36%, 47%, 50%);
+        --primary55: hsl(133, 36%, 47%, 55%);
+        --primary60: hsl(133, 36%, 47%, 60%);
+        --primary65: hsl(133, 36%, 47%, 65%);
+        --primary70: hsl(133, 36%, 47%, 70%);
+        --primary75: hsl(133, 36%, 47%, 75%);
+        --primary80: hsl(133, 36%, 47%, 80%);
+        --primary85: hsl(133, 36%, 47%, 85%);
+        --primary90: hsl(133, 36%, 47%, 90%);
+        --primary95: hsl(133, 36%, 47%, 95%);
+        --secondary5: hsl(168, 36%, 27%, 5%);
+        --secondary10: hsl(168, 36%, 27%, 10%);
+        --secondary15: hsl(168, 36%, 27%, 15%);
+        --secondary20: hsl(168, 36%, 27%, 20%);
+        --secondary25: hsl(168, 36%, 27%, 25%);
+        --secondary30: hsl(168, 36%, 27%, 30%);
+        --secondary35: hsl(168, 36%, 27%, 35%);
+        --secondary40: hsl(168, 36%, 27%, 40%);
+        --secondary45: hsl(168, 36%, 27%, 45%);
+        --secondary50: hsl(168, 36%, 27%, 50%);
+        --secondary55: hsl(168, 36%, 27%, 55%);
+        --secondary60: hsl(168, 36%, 27%, 60%);
+        --secondary65: hsl(168, 36%, 27%, 65%);
+        --secondary70: hsl(168, 36%, 27%, 70%);
+        --secondary75: hsl(168, 36%, 27%, 75%);
+        --secondary80: hsl(168, 36%, 27%, 80%);
+        --secondary85: hsl(168, 36%, 27%, 85%);
+        --secondary90: hsl(168, 36%, 27%, 90%);
+        --secondary95: hsl(168, 36%, 27%, 95%);
+        --accent5: hsl(175, 36%, 39%, 5%);
+        --accent10: hsl(175, 36%, 39%, 10%);
+        --accent15: hsl(175, 36%, 39%, 15%);
+        --accent20: hsl(175, 36%, 39%, 20%);
+        --accent25: hsl(175, 36%, 39%, 25%);
+        --accent30: hsl(175, 36%, 39%, 30%);
+        --accent35: hsl(175, 36%, 39%, 35%);
+        --accent40: hsl(175, 36%, 39%, 40%);
+        --accent45: hsl(175, 36%, 39%, 45%);
+        --accent50: hsl(175, 36%, 39%, 50%);
+        --accent55: hsl(175, 36%, 39%, 55%);
+        --accent60: hsl(175, 36%, 39%, 60%);
+        --accent65: hsl(175, 36%, 39%, 65%);
+        --accent70: hsl(175, 36%, 39%, 70%);
+        --accent75: hsl(175, 36%, 39%, 75%);
+        --accent80: hsl(175, 36%, 39%, 80%);
+        --accent85: hsl(175, 36%, 39%, 85%);
+        --accent90: hsl(175, 36%, 39%, 90%);
+        --accent95: hsl(175, 36%, 39%, 95%);
+    }
+}
